--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>portfolio</h1>
+        <h1>HAEDYN JORGENSON</h1>
         <nav>
             <ul>
                 <li><a href="#about">about.</a></li>
