--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <header>
         <h1>HAEDYN JORGENSON</h1>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
         <nav>
             <ul>
                 <li><a href="#about">about.</a></li>
