--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+    <h1 style="font-family: "Italiana", sans-serif;">HAEDYN JORGENSON</h1>
         <nav>
             <ul>
                 <li><a href="#about">about.</a></li>
