--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAEDYN JORGENSON</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
 
 <body>
     <header>
-        <h1>HAEDYN JORGENSON</h1>
-    </head><link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
-    <h1 style="font-family: "Italiana", sans-serif;">HAEDYN JORGENSON</h1>
+        <h1 style="font-family: Italiana, sans-serif;">HAEDYN JORGENSON</h1>
+
         <nav>
             <ul>
                 <li><a href="#about">about.</a></li>
