--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAEDYN JORGENSON</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        h1 {
+            font-family: Italiana, sans-serif;
+            text-align: center;
+        }
+    </style>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +27,7 @@
 
 <body>
     <header>
-        <h1 style="font-family: Italiana, sans-serif;">HAEDYN JORGENSON</h1>
+        <h1>HAEDYN JORGENSON</h1>
 
         <nav>
             <ul>
