--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             font-family: Italiana, sans-serif;
             text-align: center;
         }
+        nav a {
+            display: inline-block; 
+            margin: 0 10px; 
+            text-decoration: none; 
+            font-family: Arial, sans-serif; 
+        }
     </style>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,11 +36,9 @@
         <h1>HAEDYN JORGENSON</h1>
 
         <nav>
-            <ul>
-                <li><a href="#about">about.</a></li>
-                <li><a href="#contact">contact.</a></li>
-                <li><a href="#work">work.</a></li>
-            </ul>
+                <a href="#about">about.</a>
+                <a href="#contact">contact.</a>
+                <a href="#work">work.</a>
         </nav>
     </header>
 
