--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             display: inline-block; 
             margin: 0 10px; 
             text-decoration: none; 
-            font-family: Arial, sans-serif; 
+            font-family: Italiana, sans-serif; 
+            text-align: center;
         }
     </style>
 
