--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </nav>
     </header>
 
+    <img src="images/haedynsenior.jpg" alt="image of haedyn"
+
     <section id="about">
         <h2>about me</h2>
         <p>Welcome to the digital domain of Haedyn Jorgenson. I am a 
