--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
 
-    <img src="images/haedynsenior.jpg" alt="image of haedyn"
+    <img src="images/seniorhaedyn.JPG" alt="image of haedyn"
 
     <section id="about">
         <h2>about me</h2>
