added img container

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </nav>
     </header>
 
-    <img class= "rounded-image" src="images/seniorhaedyn.JPG" alt="image of haedyn"
+    <div class="container">
+        <img class= "rounded-image" src="images/seniorhaedyn.JPG" alt="image of haedyn"
+    </div>
 
     <section id="about">
         <h2>about me</h2>
