added new files contact and work

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             font-family: Italiana, sans-serif; 
             text-align: center;
         }
+
+        .container {
+            text-align: center;
+        }
     </style>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,13 +42,13 @@
 
         <nav>
                 <a href="#about">about.</a>
-                <a href="#contact">contact.</a>
-                <a href="#work">work.</a>
+                <a href="contact.html">contact.</a>
+                <a href="work.html">work.</a>
         </nav>
     </header>
 
     <div class="container">
-        <img class= "rounded-image" src="images/seniorhaedyn.JPG" alt="image of haedyn"
+        <img class= "rounded-image" src="images/seniorhaedyn.JPG" alt="image of haedyn">
     </div>
 
     <section id="about">
