added resume button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <a href="#about">about.</a>
                 <a href="contact.html">contact.</a>
                 <a href="work.html">work.</a>
+                <a href="resume.pdf" target="_blank">resume</a>
         </nav>
     </header>
 
