--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,16 @@
         <h1>contact me!</h1>
 
         <form action="submit_contact_form.php" method="POST">
-            <label for="name">Haedyn Jorgenson</label>
+            <label for="name">NAME:</label>
             <input type="text" id="name" name="name" required><br>
 
-            <label for="email">haedynjorgenson@gmail.com</label>
+            <label for="email">EMAIL:</label>
             <input type="text" id="name" name="name" required><br>
 
-            <label for="message">message:</label><br>
+            <label for="message">MESSAGE:</label><br>
             <textarea id="message" name="message" rows="4" required></textarea><br>
 
-            <button type="submit">submit!</button>
+            <button type="submit">SUBMIT!</button>
         </form>
     </body>
 </html>
