--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
     <div class="project-container">
         <a href="project1.html" class="project-link">
             <div class="project-square">
-                Project 1
+                Case Study
             </div>
         </a>
         <a href="project2.html" class="project-link">
