--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
     <h1 class="heading">My Projects</h1>
 
     <div class="project-container">
-        <a href="case study.pdf" class="project-link">
+        <a href="case study.docx" class="project-link">
             <div class="project-square">
                 Case Study
             </div>
