--- a/work.html
+++ b/work.html
@@ -27,9 +27,9 @@
                 Case Study
             </div>
         </a>
-        <a href="project2.html" class="project-link">
+        <a href="informational interview.docx" class="project-link">
             <div class="project-square">
-                Project 2
+                Informational Interview
             </div>
         </a>
         <!-- Add more projects as needed -->
