--- a/work.html
+++ b/work.html
@@ -31,6 +31,10 @@
             <div class="project-square">
                 Informational Interview
             </div>
+        <a href="classmate profile.docx" class="project-link"
+        <div class="project-square">
+            Classmate Profile
+        </div>
         </a>
         <!-- Add more projects as needed -->
     </div>
