--- a/work.html
+++ b/work.html
@@ -31,12 +31,12 @@
             <div class="project-square">
                 Informational Interview
             </div>
-        <a href="classmate profile.docx" class="project-link"
-        <div class="project-square">
-            Classmate Profile
         </div>
         </a>
-        <!-- Add more projects as needed -->
+        <a href="classmate profile.docx" class="project-link">
+            <div class="project-square">
+                Classmate Profile
+            </div>
     </div>
 </body>
 </html>
