--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <nav>
                 <a href="#about">about.</a>
                 <a href="contact.html">contact.</a>
-                <a href="work.html">work.</a>
+                <a href="work.html">projects.</a>
                 <a href="resume.pdf" target="_blank">resume</a>
         </nav>
     </header>
